Styled the footer a little bit

--- a/pivot/_components/footer.html
+++ b/pivot/_components/footer.html
@@ -1,10 +1,9 @@
-	<footer id="footer">
-		<div class="footer-holder">
-			<div class="footer-logo">
-			</div>
-			<em class="footer-info">
-			<p>Last update: %%mod_date%% </p>
-			<p>You are here: %%nav%% %%doc%% (%%doc_id%%) </p> 
-			Copyright &copy; 2016 <em class="dash">-</em> Trustees of Dartmouth College</em>
+	<section class="footer">
+		<div class="row">
+		<div class="large-8 large-centered columns">
+					<p>Last update: %%mod_date%% <br>
+					You are here: %%nav%% %%doc%% (%%doc_id%%) <br> 
+					Copyright &copy; 2016 &ndash; Trustees of Dartmouth College</p>
+				</div>
 		</div>
-	</footer>
+	</section>
