--- a/pivot/_components-3/header.html
+++ b/pivot/_components-3/header.html
@@ -1,6 +1,7 @@
 <header id="header">
 	<div class="row">
 		<div class="large-9 large-centered  columns">
+ 		%%pivot_messages%%
 			<div class="program-name">Dartmouth Toxic Metals Superfund Research Program</div>
 			<div class="subheader program-title">Arsenic in Food and Water</div>
 			<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
