Add illustrations and styling

--- a/src/pages/health-child.html
+++ b/src/pages/health-child.html
@@ -12,7 +12,7 @@
 <section class="main-content">
     <div class="row">
         <div class="large-7 large-centered  medium-9 medium-centered  columns main-content-body">
-
+<div class="illustration bb"><img src="http://localhost:8000/assets/img/babybottle.svg" alt=""> </div>
 {{#markdown}}
 
 ## What are the Health Effects of Arsenic?
