Revise website header
Changed header title/text; not yet final. Left-aligned per client
request. Briefly adjusted text sizes, needs additional attention. Note
html style hack on the first menu item, to remove left padding.

--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -2,15 +2,16 @@
 	<div class="row">
 		<div class="large-9 large-centered  columns">
 		%%pivot_messages%%
-			<div class="program-name">Dartmouth Toxic Metals Superfund Research Program</div>
-			<div class="subheader program-title">Arsenic in Food and Water</div>
+			<div class="program-name">UNDERSTANDING ARSENIC</div>
+			<div class="subheader program-title">Comprehensive Information on Arsenic in Water, Food & Other Sources</div>
 			<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
 				<button class="menu-icon" type="button" data-toggle></button>
 				<div class="title-bar-title">Menu</div>
 			</div> <!-- /title-bar -->
 			<nav id="main-menu"> 
 				<ul class="dropdown menu vertical medium-horizontal" data-responsive-menu="drilldown medium-dropdown">
-					<li><a href="1">Home</a></li>
+				<!-- TODO: remove style hack on next line -->
+					<li><a href="1" style="padding-left:0;">Home</a></li>
 					<li><a href="10">Arsenic &amp; Your Health</a>
 						<ul class="menu">
 							<li class="active10"><a href="10">Overview</a></li>
