Added program-sponsor to header
Thus also adjusted program-name and program-title font sizes a bit.
Probably needs review by a Real Designer™…

--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -4,6 +4,7 @@
 		%%pivot_messages%%
 			<div class="program-name">UNDERSTANDING ARSENIC</div>
 			<div class="subheader program-title">Comprehensive Information on Arsenic in Water, Food & Other Sources</div>
+			<div class="program-sponsor">Produced by the Dartmouth Toxic Metals Superfund Research Program in cooperation with the New Hampshire Arsenic Consortium</div>
 			<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
 				<button class="menu-icon" type="button" data-toggle></button>
 				<div class="title-bar-title">Menu</div>
