Updated navigation structure

--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -3,7 +3,7 @@
 		<div class="large-9 large-centered  columns">
 		%%pivot_messages%%
 			<div class="program-name">UNDERSTANDING ARSENIC</div>
-			<div class="subheader program-title">Comprehensive Information on Arsenic in Water, Food & Other Sources</div>
+			<div class="subheader program-title">Comprehensive Information on Arsenic in Water, Food &amp; Other Sources</div>
 			<div class="program-sponsor">Produced by the Dartmouth Toxic Metals Superfund Research Program</div>
 			<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
 				<button class="menu-icon" type="button" data-toggle></button>
@@ -13,42 +13,35 @@
 				<ul class="dropdown menu vertical medium-horizontal" data-responsive-menu="drilldown medium-dropdown">
 				<!-- TODO: remove style hack on next line -->
 					<li><a href="1" style="padding-left:0;">Home</a></li>
-					<li><a href="10">Arsenic &amp; Your Health</a>
+					<li><a href="#">Arsenic &amp; Your Health</a>
 						<ul class="menu">
-							<li class="active10"><a href="10">Overview</a></li>
 							<li class="active23"><a href="23">Exposure</a></li>
 							<li class="active24"><a href="24">Health Effects</a></li>
 							<li class="active11"><a href="11">Children</a></li>
 							<li class="active9"><a href="9">Gluten-Free</a></li>
-							<li class="active27"><a href="27">Smoking</a></li>
-							<li class="active28"><a href="28">Pressure-Treated Wood</a></li>
-							<li class="active26"><a href="26">At-Risk Communities</a></li>
 
 						</ul>
 					</li>
-					<li><a href="14">Arsenic &amp; Food</a>
+					<li><a href="#">Arsenic in Food</a>
 						<ul class="menu">
-							<li class="active14"><a href="14">Overview</a></li>
-							<li class="active15"><a href="15">Infants</a></li>
 							<li class="active19"><a href="19">Rice</a></li>
-							<li class="active13"><a href="13">Seafood</a></li>
-							<li class="active16"><a href="16">Meat &amp; Eggs</a></li>
+							<li class="active18"><a href="18">Fruits, Juices &amp; Vegetables</a></li>
 							<li class="active17"><a href="17">Beer &amp; Wine</a></li>
-							<li class="active18"><a href="18">Fruits &amp; Veggies</a></li>
+							<li class="active13"><a href="13">Seafood</a></li>
+							<li class="active16"><a href="16">Meat &amp; Animal Products</a></li>
 						</ul>
 					</li>
-					<li><a href="12">Arsenic &amp; Water</a>
+					<li><a href="#">Arsenic in Water</a>
 						<ul class="menu">
-							<li class="active12"><a href="12">Overview</a></li>
 							<li class="active20"><a href="20">Testing</a></li>
 							<li class="active21"><a href="21">Treatment</a></li>
 						</ul>							
 					</li>
-					<li><a href="7">Resources</a>
+					<li><a href="#">Resources</a>
 						<ul class="menu">
-							<li class="active7"><a href="7">Overview</a></li>
-							<li class="active6"><a href="6">FAQs</a></li>
-							<li class="active8"><a href="8">Media</a></li>
+							<li><a href="#">Sources of Arsenic</a></li>
+							<li class="active7"><a href="7">Information and Resource Links</a></li>
+							<li class="active7"><a href="29">Definitions</a></li>
 						</ul>														
 					</li>
 				</ul>
