Linked 'sources' page; updated TODO

--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -39,7 +39,7 @@
 					</li>
 					<li><a href="#">Resources</a>
 						<ul class="menu">
-							<li><a href="#">Sources of Arsenic</a></li>
+							<li><a href="30">Other Sources of Arsenic</a></li>
 							<li class="active7"><a href="7">Information and Resource Links</a></li>
 							<li class="active7"><a href="29">Definitions</a></li>
 						</ul>														
