--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -37,9 +37,9 @@
 							<li class="active21"><a href="21">Treatment</a></li>
 						</ul>							
 					</li>
+					<li><a href="30">Other Arsenic Sources</a></li>
 					<li><a href="#">Resources</a>
 						<ul class="menu">
-							<li><a href="30">Other Sources of Arsenic</a></li>
 							<li class="active7"><a href="7">Information and Resource Links</a></li>
 							<li class="active7"><a href="29">Definitions</a></li>
 						</ul>														
