--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -10,20 +10,19 @@
 				<div class="title-bar-title">Menu</div>
 			</div> <!-- /title-bar -->
 			<nav id="main-menu"> 
-				<ul class="dropdown menu vertical medium-horizontal" data-responsive-menu="drilldown medium-dropdown">
+				<ul class="vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown">
 				<!-- TODO: remove style hack on next line -->
 					<li><a href="1" style="padding-left:0;">Home</a></li>
 					<li><a href="#">Arsenic &amp; Your Health</a>
-						<ul class="menu">
+						<ul class="menu vertical">
 							<li class="active23"><a href="23">Exposure</a></li>
 							<li class="active24"><a href="24">Health Effects</a></li>
 							<li class="active11"><a href="11">Children</a></li>
 							<li class="active9"><a href="9">Gluten-Free</a></li>
-
 						</ul>
 					</li>
 					<li><a href="#">Arsenic in Food</a>
-						<ul class="menu">
+						<ul class="menu vertical">
 							<li class="active19"><a href="19">Rice</a></li>
 							<li class="active18"><a href="18">Fruits, Juices &amp; Vegetables</a></li>
 							<li class="active17"><a href="17">Beer &amp; Wine</a></li>
@@ -32,14 +31,14 @@
 						</ul>
 					</li>
 					<li><a href="#">Arsenic in Water</a>
-						<ul class="menu">
+						<ul class="menu vertical">
 							<li class="active20"><a href="20">Testing</a></li>
 							<li class="active21"><a href="21">Treatment</a></li>
 						</ul>							
 					</li>
 					<li><a href="30">Other Arsenic Sources</a></li>
 					<li><a href="#">Resources</a>
-						<ul class="menu">
+						<ul class="menu vertical">
 							<li class="active7"><a href="7">Information and Resource Links</a></li>
 							<li class="active7"><a href="29">Definitions</a></li>
 						</ul>														
