--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -2,8 +2,8 @@
 	<div class="row">
 		<div class="large-9 large-centered  columns">
 		%%pivot_messages%%
-			<div class="program-name">UNDERSTANDING ARSENIC</div>
-			<div class="subheader program-title">Comprehensive Information on Arsenic in Water, Food &amp; Other Sources</div>
+			<div class="program-name">Arsenic and You</div>
+			<div class="subheader program-title">Information on Arsenic in Food, Water &amp; Other Sources</div>
 			<div class="program-sponsor">Produced by the Dartmouth Toxic Metals Superfund Research Program</div>
 			<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
 				<button class="menu-icon" type="button" data-toggle></button>
