--- a/pivot/content/content-exposure.html
+++ b/pivot/content/content-exposure.html
@@ -1,41 +1,79 @@
-# How much arsenic is in your world?
+## How do you know if you are exposed to arsenic?
 
-<p class="lead">Everyone should be aware of the amount of arsenic in their food and water. Anyone can take action to reduce their arsenic exposure and protect their family's long-term health.</p>
+* Do you drink water from a private well?
+* Do you eat rice or rice products on regular basis?
+* Do your children regularly drink apple or other juices?
+* Do you have infants, small children at home or are you pregnant?
+* If you grow vegetables at home have you had your soil tested?
+* Do you regularly eat Hijicki seaweed?
+* Does your family come in contact with pressure-treated wood?
+* Do you smoke?
+* Do you live near industrial sites? (connect to page)
 
+**Anyone** can be exposed to arsenic and should check out more of this site to learn how. But if you answered yes to any of the questions above, please pay particular attention to learn about your total arsenic exposure. 
 
-## Should I be worried about arsenic?
+**Anyone** can get sick from arsenic, but certain people are more at risk:
 
-Arsenic isn't just a deadly poison from a mystery story. In the U.S., many people are exposed to very small amounts of arsenic through their food and drinking water at levels that may increase their risk of certain diseases like cancer, heart disease, and diabetes.
+* Private well owners
+* Babies
+* Children
+* Pregnant Women 
+* Smokers 
+* People living in certain parts of the country with higher levels of arsenic  
+
+<img src="usgsmap" width 75.25" height="100.75" class="right" > 
+
+<div class="callout"><h3>What You Can Do</h3>
+<ul>
+<li>Read the pages on this site to learn what foods and beverages may contain arsenic.
+<li>Identify potential sources of arsenic in your world by comparing what you and your family eat and drink each day to this list of foods and beverages (link to consumer reports?) that are higher in arsenic</li>
+<li>Learn how to <a href="20">test your private well</a>, since testing is the only way to know that water contains arsenic. </li>
+<li>Review the recommendations on each page of this site (link to whole list here?) [on each page of this site] to learn what you can do to reduce your arsenic exposure as much as possible to avoid arsenic-related health effects. </li>
+<li>If you are very concerned about arsenic, contact your doctor, the <a href="http://www.dartmouth.edu/~toxmetal/index.html">Dartmouth Superfund Research Program</a>, your state or local health department, <a href="http://www.atsdr.cdc.gov/substances/toxsubstance.asp?toxid=3#13">Agency for Toxic Substances and Disease Registry</a>, or the EPA for more information. </li>
+<li>If you have <a href="11">babies or children</a> at home, or if you are pregnant, it is especially important to reduce your arsenic exposure as much as possible. </li>
+</ul>
 
 By following the simple recommendations in this website, you can reduce your total arsenic exposure. Reducing your arsenic exposure now will improve your long-term health.
- 
-While it's impossible to totally eliminate arsenic from your world, keeping your arsenic intake as close to zero as possible is a good goal. At very high doses, arsenic causes serious and immediate health effects (that's why people know it best as a poison!), but in the U.S., levels of arsenic in food and water are usually too low to cause obvious symptoms or make you sick right away. But consuming small amounts or arsenic every day through your food and water can increase your risk of getting certain diseases later in life unless you take action now to reduce your exposure.
+</div>
 
-While everyone should be aware of their arsenic consumption, in the U.S., private well owners, infants, children, pregnant women, people who eat a lot of rice, and smokers are most vulnerable to the effects of arsenic. If you think you are exposed to too much arsenic from one or more sources, there are steps you can take to reduce your arsenic exposure now that will boost your chances of staying healthy long-term.
+##Why is arsenic a problem?
+
+You can't see smell, or taste arsenic. At very high doses, arsenic causes harmful health effects. In the U.S., levels of arsenic in food and water are often too low to make you sick right away. 
+
+But taking in small amounts of arsenic every day, through your food and water, can increase your risk for: 
+
+* Cancer 
+* Heart disease 
+* Diabetes 
+* and other <a href="24">health concerns</a> later in life. Since arsenic causes cancer, no level of exposure is completely safe.
 
 ## Where does arsenic come from?
 
-Arsenic is a metal that is found in rocks, soil, air, water, plants and animals. Arsenic has also been used in pesticides, animal feed, and certain industrial processes. As scientists are learning more about the importance of keeping arsenic exposure low, industry and food producers are taking steps to reduce the amount of arsenic in the environment. The use of pesticides containing arsenic has been banned on food-producing land, drug companies have removed arsenic from animal feed, and arsenic is no longer used to pressure treat wood in residential structures.
+<img src="rock3" class="right" width="75.25" height="75.25">
 
-**Graphic: landscape of arsenic sources: possibly figure from renewal application**
+Arsenic is a metal found in rocks, soil, air, water, plants and animals. Arsenic has also been used in pesticides, animal feed, and certain industrial processes. Human activities that result in arsenic entering our environment include: 
+
+* Burning coal for energy 
+* Mining metals
+* Metal smelting operations 
+* Pesticide application
+* Glass manufacture 
+* Disposal of wastewater sludges 
+* Pharmaceutical waste
+* Livestock dips
+* Phosphate fertilizer application 
+* Wood preservatives 
+* Chemotherapeutic drugs 
+
+[ Add As photo from TP ppt.]
+
 
 ## How is arsenic regulated?
 
-The EPA regulates arsenic in public water supplies, and the FDA regulates arsenic in bottled water and has proposed regulations for some food products that are likely to contain harmful amounts of arsenic.  
+* There are currently no U.S. regulatory limits on arsenic in food. 
+* The U.S. Environmental Protection Agency regulates arsenic in public water supplies.(link)
+* The U.S. Food and Drug Administration regulates arsenic in bottled water and has proposed regulations for rice and apple juice which testing has shown contain higher levels of arsenic.(links here)
+* If you drink from a private well, it is your responsibility to test your well water for arsenic. 
 
-There are not limits on arsenic in many foods and if you drink from a private well, it is your responsibility to make sure your well water does not contain arsenic. This is particularly important if you are pregnant or have infants or children in your house, since studies have found that arsenic negatively affects growth and development.
+> "Arsenic has no taste, smell or color.  It is in foods and beverages, drinking water, soil, pressure treated wood and cigarettes. While everyone is exposed to some arsenic, learn about the potential sources of arsenic in your daily life, and make simple changes to keep your arsenic exposure as low as possible to protect your long-term health." <cite>Dr. Margaret Kurzius-Spencer, University of Arizona </cite>
 
-> "At very high doses, arsenic can be a deadly poison, but that's not what people should be worried about. In the U.S., people who eat a lot of foods that are high in arsenic or drink water from wells that have not been treated for arsenic are at higher risk for developing health problems such as heart disease and cancer later in life. If people learn how to reduce their arsenic exposure today, they can increase their chances of staying healthy in the future." <cite>June Smith, Professor of Science, College University</cite>
-
-<div class="callout large">
-
-<h3>Recommendations</h3>
-<ul>
-<li>Check out the pages on this site to learn what foods and beverages may contain arsenic and identify potential sources of arsenic in your world. </li>
-<li>Learn how to test your private well, since testing is the only way to know that water contains arsenic. </li>
-<li>Review the recommendations to learn what you can do to reduce your arsenic exposure as much as possible to avoid arsenic-related health effects. </li>
-<li>If you are very concerned about arsenic, contact your doctor, The Dartmouth Superfund Research Program, your state or local health department, ATSDR, or the EPA for more information. </li>
-<li>*Arsenic ToxFAQs http://www.atsdr.cdc.gov/toxfaqs/tfacts2.pdf* </li>
-<li>If you have babies or children at home, or if you are pregnant, it is especially important to reduce your arsenic exposure as much as possible. </li>
-<li>See the **children** page under **arsenic & your health** to learn more about why arsenic is more of a problem for babies and kids.  **link to children page** </li>
-</div>
