--- a/pivot/_components-3/footer.html
+++ b/pivot/_components-3/footer.html
@@ -4,6 +4,7 @@
 					<p>Last update: %%mod_date%% <br>
 					You are here: %%nav%% %%doc%% (%%doc_id%%) <br> 
 					Copyright &copy; 2016 &ndash; Trustees of Dartmouth College</p>
+					<p><em>This information is based on current scientific knowledge about arsenic in food, water, and other sources. It includes evidence-based recommendations to help you reduce exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em></p>
 				</div>
 		</div>
 	</section>
