Updated content page for index

--- a/pivot/content/home-index.html
+++ b/pivot/content/home-index.html
@@ -1,20 +1,43 @@
-# What You Need to Know About Arsenic
+## Should you be concerned about arsenic?
 
-<p class="lead">We hope this website will answer your questions about arsenic and the ways in which you can lower your exposure to this toxic metal. By combining information about exposure through, food, water and other, less common exposure pathways, we hope to provide all the information you need to make choices to improve yours and your family's overall health. </p>
+It depends. But finding out how you might be exposed to arsenic is a good place to start. 
 
+**Review the pages** in this site to see if your diet includes food or drinks that are higher in arsenic or if you might be exposed to other sources. 
 
-## Arsenic is a Hazardous Substance
+**Follow the steps** outlined on each page to reduce your arsenic exposure if necessary. [include map of site?] See the Resource links for helpful tools, videos and more detailed information. (put links to the pages mentioned here?)
 
-Arsenic is a toxic metal ranked #1 on the Priority List of Hazardous Substances by the US Agency for Toxic Substances and Disease Registry.  Research has shown that chronic exposure to arsenic at levels as low as ten parts per billion is associated with many negative health outcomes, such as increased rates of skin, lung and bladder cancer, cardiovascular disease, reduced immune response, and impaired fetal and child development. The type of arsenic in rice is primarily inorganic arsenic, which is more toxic than the less toxic organic arsenic that is dominant in seafood. 
+## Why is arsenic a problem?
 
-Arsenic affects many systems in your body by disrupting certain important functions in your cells. This can affect child development, your immune system, your heart health, and can increase your risk of developing certain types of cancer.
+**You can't see smell, or taste arsenic**. At very high doses, arsenic is poisonous and causes serious and immediate health effects, but in the U.S., levels of arsenic in food and water are usually too low to cause obvious symptoms or make you sick right away.
+ 
+Most people in this country are exposed by taking in small amounts of arsenic every day through food, water and other sources at levels that may increase their risk of diseases like cancer, heart disease and diabetes later in life. [link to health effects] Since arsenic causes cancer, no level of exposure is completely safe. 
 
-## Arsenic is a Natural Substance
+## What can **you** do?
 
-Protecting against low-level arsenic exposure is challenging because arsenic is a natural substance; it's a metal that's found in soil, air, water, plants and animals. However, there is variation in the amount of arsenic in water and in food, and it's possible to decrease your arsenic exposure significantly by making smart choices about your diet and your drinking water. Since arsenic is a carcinogen, or a substance that causes cancer, there is no level of arsenic exposure that is completely safe, and it's always a good idea to keep your arsenic exposure as low as possible. 
+* If you have a private well, get your water tested.  
+* If you eat a lot of rice or other foods that are higher in arsenic [link to food pages} eat them less often or vary with others types of food that are lower in arsenic. 
+* If you are pregnant or have infants or children in your home, be sure your family's diet is as low in arsenic as possible since arsenic may negatively affect growth and development. 
+* Eat a varied diet to make sure you're getting balanced nutrition. 
+* Don't completely stop eating a food if it still provides nutritional benefits. 
+* Stop smoking (link to other sources page). 
+* Review this site to better understand your total arsenic exposure.  
+* Reduce your total arsenic exposure by following the recommendations in this website. 
+* Lowering your arsenic exposure now could improve your long-term health. 
 
-As scientists are learning more about the importance of keeping arsenic exposure low, industry and food producers are already taking steps to reduce the amount of arsenic in the environment. The use of pesticides containing arsenic has been banned on food-producing land, and drug companies have removed arsenic from animal feed. Arsenic is no longer used to pressure-treat wood, and the FDA and international food safety groups are considering maximum limits for arsenic in food. 
+##Where is the arsenic?
 
-## Take Responsibility 
+Arsenic is in soil, air, water, plants and animals. As scientists are learning more about the importance of keeping arsenic exposure low, industry and food producers are already taking steps to reduce the amount of arsenic in the environment: 
 
-Right now there are not limits to arsenic in food and if you drink from a private well, it is your responsibility to make sure your well does not contain arsenic. This is particularly important if you are pregnant or have infants or children in your house, since arsenic may negatively affect growth and development. It is also important to eat a varied diet to make sure you're getting balanced nutrition, and avoiding excessive arsenic exposure from any one food or beverage.
+* The use of pesticides containing arsenic has been banned on food-producing land.  
+* Drug companies have removed arsenic from animal feed.  
+* Arsenic is no longer used to pressure-treat wood.  
+* The FDA and international food safety groups are considering maximum limits for arsenic in food.  
+
+But since it's impossible to totally eliminate arsenic from the world, it is up to you to decrease your arsenic exposure by making careful choices about your diet, your drinking water and other arsenic sources [link to other sources page].
+
+##Is arsenic regulated?
+
+* <a href="https://www.epa.gov/dwreginfo/drinking-water-regulatory-information#chemcont">Public water supplies</a>  are regulated by the U.S. Environmental Protection Agency.  
+* If you drink from a private well, it is your responsibility to make sure your well water does not contain arsenic.  
+* Right now there are no regulatory limits for arsenic in food.   
+
