--- a/pivot/_components-3/newHeader.html
+++ b/pivot/_components-3/newHeader.html
@@ -1,15 +1,20 @@
 <header id="header">
 	<div class="row">
-		<div class="large-9 large-centered  columns">
+		<div class="large-9 large-centered columns">
 		%%pivot_messages%%
-			<div class="program-name">Arsenic and You</div>
-			<div class="subheader program-title">Information on Arsenic in Food, Water &amp; Other Sources</div>
-			<div class="program-sponsor">Produced by the Dartmouth Toxic Metals Superfund Research Program</div>
 			<div class="title-bar" data-responsive-toggle="main-menu" data-hide-for="medium">
 				<button class="menu-icon" type="button" data-toggle></button>
 				<div class="title-bar-title">Menu</div>
 			</div> <!-- /title-bar -->
-			<nav id="main-menu"> 
+			<div class="program-name">Arsenic and You</div>
+			<div class="subheader program-title">Information on Arsenic in Food, Water &amp; Other Sources</div>
+			<div class="program-sponsor">Produced by the Dartmouth Toxic Metals Superfund Research Program</div>
+			</div> <!-- /columns -->
+		</div> <!-- /row -->
+</header>
+    <div class="nav-container row">
+        <div class="large-centered columns">
+            <nav id="main-menu"> 
 				<ul class="vertical medium-horizontal menu" data-responsive-menu="drilldown medium-dropdown">
 				<!-- TODO: remove style hack on next line -->
 					<li><a href="1" style="padding-left:0;">Home</a></li>
@@ -45,6 +50,3 @@
 					</li>
 				</ul>
 			</nav>
-			</div> <!-- /columns -->
-		</div> <!-- /row -->
-</header>
