Updated footer html

--- a/pivot/_components-3/footer.html
+++ b/pivot/_components-3/footer.html
@@ -1,6 +1,6 @@
 	<section class="footer">
 		<div class="row">
-		<div class="large-9 columns">
+		<div class="large-9  large-centered columns">
 					<p>Last update: %%mod_date%% <br>
 					You are here: %%nav%% %%doc%% (%%doc_id%%) <br> 
 					Copyright &copy; 2016 &ndash; Trustees of Dartmouth College</p>
@@ -8,3 +8,4 @@
 				</div>
 		</div>
 	</section>
+
