Updated html for footer and callout-2

--- a/pivot/content/children-water.html
+++ b/pivot/content/children-water.html
@@ -11,7 +11,7 @@ Young children have very small bodies and eat more food per pound of body weight
 
 Pregnant women should also be careful not to eat or drink arsenic, because it can get into their baby's body too. Arsenic can cross the placenta, which means that a pregnant woman's arsenic exposure through food and water may affect her baby's growth and development or lead to health problems later on.   
 
-<div class="callout large"><h3>What You Can Do</h3>
+<div class="callout"><h3>What You Can Do</h3>
 <ul>
 <li>If you have a private well, <a href="20">test your water for arsenic</a>. If your well has arsenic, switch to bottled water for drinking and cooking immediately and <a href="21">learn about your options</a> for getting arsenic out of your drinking water. </li> 
 <li>Talk to your doctor about breast-feeding your infant or toddler. Studies have found lower levels of arsenic in breast milk than in infant formula. </li>
@@ -28,24 +28,20 @@ Pregnant women should also be careful not to eat or drink arsenic, because it ca
 </ul>
 </div>
 
---- 
-
-#### What foods should I be concerned about for my child? (this should go in a box on the side with text wrapped around like a call-out)—or become a graphic
-
-Some foods have more arsenic than others. Examples include:
-
-* Rice cereal
-* Rice snacks
-* Rice milk
-* Baby formula made with rice 
-* Foods with organic brown rice syrup
-* Apple juice (pear juice? See FDA)
-
-#### How do I know how much arsenic is in the foods I give my child? (this should go in a box on the side with text wrapped around like a call-out)—or become a graphic
-
-It's best to reduce or avoid these foods if you can. When you go to the grocery store, you won't see labels on foods saying how much arsenic is in them. In the U.S., there are no laws about labels or limits on arsenic in foods.
-
----
+<div class="callout-2">
+	<h4>What foods should I be concerned about for my child?</h4>
+	<p>Some foods have more arsenic than others. Examples include:</p>
+	<ul>
+		<li>Rice cereal</li>
+		<li>Rice snacks</li>
+		<li>Rice milk</li>
+		<li>Baby formula made with rice </li>
+		<li>Foods with organic brown rice syrup</li>
+		<li>Apple juice (pear juice? See FDA)</li>
+	</ul>
+	<h4>How do I know how much arsenic is in the foods I give my child?</h4>
+	<p>It's best to reduce or avoid these foods if you can. When you go to the grocery store, you won't see labels on foods saying how much arsenic is in them. In the U.S., there are no laws about labels or limits on arsenic in foods.</p>
+</div>
 
 ## How can you reduce arsenic for your children?
 
@@ -103,4 +99,3 @@ Soils in some parts of the country contain high levels of arsenic. Try to keep c
 Old wood playground equipment, decks, and picnic tables can sometimes have arsenic on them from a chemical that was used to <a href="30">pressure-treat wood</a>. Make sure your kids wash their hands after playing outside and that they don't eat off of wooden picnic tables. The best way to keep your kids safe from arsenic on wood is to apply a sealant every two years if the wood contains the chemical.
 
 > "Take action to avoid arsenic if you're a pregnant women, or have kids. Arsenic is harmful to child growth, development, and brain function. Kids consume more food and water per pound of body weight, so they are more likely than other age groups to be exposed to too much arsenic." <cite>June Smith, Professor of Science, College University </cite>
-
