--- a/pivot/_components-3/footer.html
+++ b/pivot/_components-3/footer.html
@@ -1,11 +1,17 @@
-	<section class="footer">
-		<div class="row">
+<section class="footer">
+	<div class="row">
 		<div class="large-9  large-centered columns">
-					<p>Last update: %%mod_date%% <br>
-					You are here: %%nav%% %%doc%% (%%doc_id%%) <br> 
-					Copyright &copy; 2016 &ndash; Trustees of Dartmouth College</p>
-					<p><em>This information is based on current scientific knowledge about arsenic in food, water, and other sources. It includes evidence-based recommendations to help you reduce exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em></p>
+			<div class="row">
+				<div class="large-6 columns">
+						<p>Last update: %%mod_date%% 
+								<br> You are here: %%nav%% %%doc%% (%%doc_id%%) 
+								<br> Copyright &copy; 2016 &ndash; Trustees of Dartmouth College</p>
+						<img class="nih-logo" src="http://yacavone.com/clients/toxicmetalsarsenic/draftsix/assets/svg/nih.svg" alt="NIH Logo">
 				</div>
+				<div class="large-6 columns">
+						<p><em>This information is based on current scientific knowledge about arsenic in food, water, and other sources. It includes evidence-based recommendations to help you reduce exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em></p>
+				</div>
+			</div>
 		</div>
-	</section>
-
+	</div>
+</section>
