Updated header to add some test classes to menu background

--- a/pivot/_components-4/newHeader.html
+++ b/pivot/_components-4/newHeader.html
@@ -27,7 +27,7 @@
 						</ul>
 					</li>
 					<li><a href="#">Arsenic in Food</a>
-						<ul class="menu vertical">
+						<ul class="menu vertical mjy-test">
 							<li class="active19"><a href="19">Rice</a></li>
 							<li class="active18"><a href="18">Fruits, Juices &amp; Vegetables</a></li>
 							<li class="active17"><a href="17">Beer &amp; Wine</a></li>
@@ -36,7 +36,7 @@
 						</ul>
 					</li>
 					<li><a href="#">Arsenic in Water</a>
-						<ul class="menu vertical">
+						<ul class="menu vertical mjy-test2">
 							<li class="active20"><a href="20">Testing</a></li>
 							<li class="active21"><a href="21">Treatment</a></li>
 						</ul>							
