Reset colors back to originals

--- a/pivot/_components-4/newHeader.html
+++ b/pivot/_components-4/newHeader.html
@@ -44,8 +44,8 @@
 					<li><a href="30">Other Arsenic Sources</a></li>
 					<li><a href="#">Resources</a>
 						<ul class="menu vertical mjy-test3">
-							<li class="active7"><a href="7" style="color: #fff;">Information and Resource Links</a></li>
-							<li class="active7"><a href="29" style="color: #fff;">Definitions</a></li>
+							<li class="active7"><a href="7">Information and Resource Links</a></li>
+							<li class="active7"><a href="29">Definitions</a></li>
 						</ul>														
 					</li>
 				</ul>
