Updated footer text and styling to drop hanging word on last line.

--- a/pivot/_components-4/footer.html
+++ b/pivot/_components-4/footer.html
@@ -9,7 +9,7 @@
 						<img class="nih-logo" src="http://yacavone.com/clients/toxicmetalsarsenic/draftsix/assets/svg/nih.svg" alt="NIH Logo">
 				</div>
 				<div class="large-6 columns">
-						<p><em>This information is based on current scientific knowledge about arsenic in food, water, and other sources. It includes evidence-based recommendations to help you reduce exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em></p>
+						<p><em>This information, based on current scientific knowledge about arsenic in food, water, and other sources, includes evidence-based recommendations to help you reduce exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em></p>
 				</div>
 			</div>
 		</div>
