Updated footer disclaimer; removed tighter word-spacing.

--- a/pivot/_components-4/footer.html
+++ b/pivot/_components-4/footer.html
@@ -6,10 +6,11 @@
 						<p>Last update: %%mod_date%% 
 								<br> You are here: %%nav%% %%doc%% (%%doc_id%%) 
 								<br> Copyright &copy; 2016 &ndash; Trustees of Dartmouth College</p>
-						<img class="nih-logo" src="http://yacavone.com/clients/toxicmetalsarsenic/draftsix/assets/svg/nih.svg" alt="NIH Logo">
+						<a href="http://www.niehs.nih.gov/research/supported/centers/srp/index.cfm"><img class="nih-logo" src="http://yacavone.com/clients/toxicmetalsarsenic/draftsix/assets/svg/nih.svg" alt="NIH Logo"></a>
 				</div>
 				<div class="large-6 columns">
-						<p><em>This information, based on current scientific knowledge about arsenic in food, water, and other sources, includes evidence-based recommendations to help you reduce exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em></p>
+						<p><em>This information, based on current scientific knowledge, includes evidence-based recommendations to help you reduce your exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em>
+							<br><a href="http://www.dartmouth.edu/~toxmetal/index.html" style="font-size: 85%;">Produced by the Dartmouth Toxic Metals Superfund Research Program</a></p>
 				</div>
 			</div>
 		</div>
