Updated footer styling

--- a/pivot/_components-4/footer.html
+++ b/pivot/_components-4/footer.html
@@ -10,7 +10,7 @@
 				</div>
 				<div class="large-6 columns">
 						<p><em>This information, based on current scientific knowledge, includes evidence-based recommendations to help you reduce your exposure to arsenic. While some may not be appropriate or possible for everyone, follow the suggestions that make sense for you. Any step taken to reduce exposure to arsenic makes a difference in lowering your chances of arsenic-related health risks.</em>
-							<br><a href="http://www.dartmouth.edu/~toxmetal/index.html" style="font-size: 85%;">Produced by the Dartmouth Toxic Metals Superfund Research Program</a></p>
+						<br><a href="http://www.dartmouth.edu/~toxmetal/index.html" class="producedBy">Produced by the Dartmouth Toxic Metals Superfund Research Program</a></p>
 				</div>
 			</div>
 		</div>
