Updated template html

--- a/pivot/_templates/defalutNew.html
+++ b/pivot/_templates/defalutNew.html
@@ -7,7 +7,7 @@
 <!-- intro -->
 <section class="intro">
 	<div class="row">
-		<div class="large-9 large-centered medium-11 medium-centered  columns">
+		<div class="large-9 large-centered column">
 			%%Introduction%% 
 		</div>
 <!-- /columns -->
