Updated two image examples to be square instead of almost square

--- a/arsenic-lace/src/pages/imageExamples.html
+++ b/arsenic-lace/src/pages/imageExamples.html
@@ -85,7 +85,9 @@ Arsenic is a metalloid naturally found in rocks, soil, air, water, plants and an
 * Wood preservatives  
 * Chemotherapeutic drugs  
 
-Hello. There are right and left classes available now for floating images.
+<hr>
+
+# Floating right and left image classes
 
 <img class="right" src="http://lorempixel.com/128/200/nature/128 x 200" alt="lorempixel"  />
 
@@ -119,7 +121,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-<img class="right" src="http://lorempixel.com/202/200/nature/202 x 200" alt="lorempixel"  />
+<img class="right" src="http://lorempixel.com/200/200/nature/200 x 200" alt="lorempixel"  />
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -135,7 +137,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-<img class="left" src="http://lorempixel.com/275/250/nature/275 x 250" alt="lorempixel"  />
+<img class="left" src="http://lorempixel.com/275/275/nature/275 x 275" alt="lorempixel"  />
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
