Revised navigation and menus

--- a/pivot/_components-4/newHeader.html
+++ b/pivot/_components-4/newHeader.html
@@ -26,22 +26,28 @@
 							<li class="active9"><a href="9">Gluten-Free</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Arsenic in Food</a>
-						<ul class="menu vertical mjy-test">
-							<li class="active19"><a href="19">Rice</a></li>
-							<li class="active18"><a href="18">Fruits, Juices &amp; Vegetables</a></li>
-							<li class="active17"><a href="17">Beer &amp; Wine</a></li>
-							<li class="active13"><a href="13">Seafood</a></li>
-							<li class="active16"><a href="16">Meat &amp; Animal Products</a></li>
-						</ul>
-					</li>
 					<li><a href="#">Arsenic in Water</a>
 						<ul class="menu vertical mjy-test2">
 							<li class="active20"><a href="20">Testing</a></li>
 							<li class="active21"><a href="21">Treatment</a></li>
 						</ul>							
 					</li>
-					<li><a href="30">Other Arsenic Sources</a></li>
+					<li><a href="#">Arsenic in Food</a>
+						<ul class="menu vertical mjy-test">
+							<li class="active19"><a href="19">Rice</a></li>
+							<li class="active18"><a href="18">Fruits, Juices &amp; Vegetables</a></li>
+							<li class="active13"><a href="13">Seafood</a></li>
+							<li class="active17"><a href="17">Beer &amp; Wine</a></li>
+							<li class="active16"><a href="16">Meat &amp; Animal Products</a></li>
+						</ul>
+					</li>
+					<li><a href="#">Other Arsenic Sources</a>
+						<ul class="menu vertical mjy-test">
+							<li class="active28"><a href="28">Pressure-Treated Wood</a></li>
+							<li class="active27"><a href="27">Smoking</a></li>
+							<li class="active26"><a href="26">Locations</a></li>
+						</ul>
+					</li>
 					<li><a href="#">Resources</a>
 						<ul class="menu vertical mjy-test3">
 							<li class="active7"><a href="7">Information and Resource Links</a></li>
