--- a/pivot/_components-4/newHeader.html
+++ b/pivot/_components-4/newHeader.html
@@ -45,7 +45,7 @@
 						<ul class="menu vertical mjy-test">
 							<li class="active28"><a href="28">Pressure-Treated Wood</a></li>
 							<li class="active27"><a href="27">Smoking</a></li>
-							<li class="active26"><a href="26">Locations</a></li>
+							<li class="active26"><a href="26">High-Risk Locations</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Resources</a>
