--- a/pivot/_components-4/newHeader.html
+++ b/pivot/_components-4/newHeader.html
@@ -1,4 +1,4 @@
-<header id="header">
+<header id="header" id="top">
 	<div class="row">
 		<div class="large-9 large-centered columns">
 		%%pivot_messages%%
