Additional content pages

--- a/pivot/content/content-exposure.html
+++ b/pivot/content/content-exposure.html
@@ -1,79 +1,81 @@
 ## How do you know if you are exposed to arsenic?
 
-* Do you drink water from a private well?
-* Do you eat rice or rice products on regular basis?
-* Do your children regularly drink apple or other juices?
-* Do you have infants, small children at home or are you pregnant?
-* If you grow vegetables at home have you had your soil tested?
-* Do you regularly eat Hijicki seaweed?
-* Does your family come in contact with pressure-treated wood?
-* Do you smoke?
-* Do you live near industrial sites? (connect to page)
+* Do you drink water from a <a href="20">private well</a>?
+* Do you or your babies or children eat <a href="19">rice or rice products</a> regularly?
+* Do your children regularly drink <a href="18">apple or other juices</a>?
+* If you grow <a href="18">vegetables</a> at home, have you had your soil tested?
+* Do you regularly eat <a href="13">Hijicki seaweed</a>?
+* Does your family come in contact with <a href="28">pressure-treated wood</a>?
+* Do you <a href="27">smoke</a>?
+* Do you live near <a href="26">industrial or hazardous waste sites</a>? 
 
-**Anyone** can be exposed to arsenic and should check out more of this site to learn how. But if you answered yes to any of the questions above, please pay particular attention to learn about your total arsenic exposure. 
+**Everyone** is exposed to some arsenic, but if you answered yes to any of the questions above, the **embedded links** will help you learn if you might be exposed to more arsenic on a regular basis. If you need to **reduce your arsenic exposure**, look for the **What You Can Do** action steps on each page.
 
-**Anyone** can get sick from arsenic, but certain people are more at risk:
+<h4>Certain people are more at risk from arsenic exposure:</h4>
 
-* Private well owners
-* Babies
-* Children
-* Pregnant Women 
-* Smokers 
-* People living in certain parts of the country with higher levels of arsenic  
+* <a href="20">Private well owners</a>
+* <a href="11">Pregnant women, Babies, Children</a>
+* <a href="19">People who regularly eat a lot of rice or rice products </a>
+* <a href="27">Smokers</a> 
+* <a href="26">People living in parts of the country with higher levels of arsenic</a>  
 
-<img src="usgsmap" width 75.25" height="100.75" class="right" > 
-
-<div class="callout"><h3>What You Can Do</h3>
+<div class="callout"><h3>WHAT YOU CAN DO</h3>
+<h4>Be Proactive</h4>
 <ul>
-<li>Read the pages on this site to learn what foods and beverages may contain arsenic.
-<li>Identify potential sources of arsenic in your world by comparing what you and your family eat and drink each day to this list of foods and beverages (link to consumer reports?) that are higher in arsenic</li>
+<li>Identify all of the potential sources of arsenic in your world by scanning the pages in this website.</li>
+<li>Compare what you and your family eat and drink each day to the food and beverages that contain arsenic.</li>
 <li>Learn how to <a href="20">test your private well</a>, since testing is the only way to know that water contains arsenic. </li>
-<li>Review the recommendations on each page of this site (link to whole list here?) [on each page of this site] to learn what you can do to reduce your arsenic exposure as much as possible to avoid arsenic-related health effects. </li>
-<li>If you are very concerned about arsenic, contact your doctor, the <a href="http://www.dartmouth.edu/~toxmetal/index.html">Dartmouth Superfund Research Program</a>, your state or local health department, <a href="http://www.atsdr.cdc.gov/substances/toxsubstance.asp?toxid=3#13">Agency for Toxic Substances and Disease Registry</a>, or the EPA for more information. </li>
-<li>If you have <a href="11">babies or children</a> at home, or if you are pregnant, it is especially important to reduce your arsenic exposure as much as possible. </li>
+<li>Review <strong>What You Can Do</strong> on each page of this site to reduce your <strong>total</strong> arsenic exposure to avoid <a href="24">health concerns</a>. </li>
+<li>If you have <a href="11">babies or children</a> at home, or if you're pregnant, it's especially important to reduce your arsenic exposure as much as possible.</li>
+</ul>
+<h4>Get Help</h4>
+<ul>
+<li>If you are very concerned about arsenic, contact your doctor, the <a href="http://www.dartmouth.edu/~toxmetal/index.html" target="_blank">Dartmouth Superfund Research Program</a>, the <a href="https://www.dartmouth.edu/~childrenshealth/index.php" target="_blank">Children's Environmental Health Center at Dartmouth</a>, your state or local health department or the <a href="http://www.atsdr.cdc.gov/substances/toxsubstance.asp?toxid=3#13" target="_blank">Agency for Toxic Substances and Disease Registry</a>. </li>
 </ul>
 
-By following the simple recommendations in this website, you can reduce your total arsenic exposure. Reducing your arsenic exposure now will improve your long-term health.
+<strong>By following the simple recommendations in this website, you can reduce your total arsenic exposure. Reducing your arsenic exposure now will improve your long-term health</strong>.
 </div>
 
-##Why is arsenic a problem?
+<div class="callout-2"> 
+<h4>Arsenic Exposure: Animated Information </h4>
+<p>This <a href="https://www.dartmouth.edu/~childrenshealth/arsenic/" target="_blank">interactive info-graphic</a> provides an overview of exposure and health information about arsenic in water and common foods. </p>
 
-You can't see smell, or taste arsenic. At very high doses, arsenic causes harmful health effects. In the U.S., levels of arsenic in food and water are often too low to make you sick right away. 
+<hr>
 
-But taking in small amounts of arsenic every day, through your food and water, can increase your risk for: 
+<h4>Is Arsenic Regulated? </h4>
+<ul>
+	<li>The U.S. Environmental Protection Agency regulates arsenic in <a href="https://www.epa.gov/dwreginfo/drinking-water-regulatory-information#chemcont" target="_blank">public water supplies</a>.</li>
+	<li>The U.S. Food and Drug Administration regulates <a href="http://www.fda.gov/food/guidanceregulation/guidancedocumentsregulatoryinformation/ucm151384.htm" target="_blank">arsenic in bottled water</a>. </li>
+	<li>If you drink from a private well, it is your responsibility to <a href="20">test your well water</a> for arsenic. </li>
+        <li>There are currently no U.S. <strong>regulatory</strong> limits on arsenic in food, but there are <strong>recommendations</strong> for arsenic in <a href="http://www.fda.gov/NewsEvents/Newsroom/PressAnnouncements/ucm493740.htm" target="_blank">baby rice cereal</a> and <a href="http://www.fda.gov/Food/FoodborneIllnessContaminants/Metals/ucm280209.htm" target="_blank">apple juice</a>.</li> 
+</ul>
+</div>
+
+## Why is arsenic a problem?
+
+You can't see, smell, or taste arsenic. At **very high levels, arsenic can cause death or harmful health effects**. In the U.S., levels of arsenic in food and water are usually too low to make you sick right away. 
+
+If you are **exposed to low amounts of arsenic every day, through your food, water or other sources**, you increase your risk for: 
 
 * Cancer 
 * Heart disease 
 * Diabetes 
-* and other <a href="24">health concerns</a> later in life. Since arsenic causes cancer, no level of exposure is completely safe.
-
-## Where does arsenic come from?
-
-<img src="rock3" class="right" width="75.25" height="75.25">
-
-Arsenic is a metal found in rocks, soil, air, water, plants and animals. Arsenic has also been used in pesticides, animal feed, and certain industrial processes. Human activities that result in arsenic entering our environment include: 
-
-* Burning coal for energy 
-* Mining metals
-* Metal smelting operations 
-* Pesticide application
-* Glass manufacture 
-* Disposal of wastewater sludges 
-* Pharmaceutical waste
-* Livestock dips
-* Phosphate fertilizer application 
-* Wood preservatives 
-* Chemotherapeutic drugs 
-
-[ Add As photo from TP ppt.]
+* and other <a href="24">health concerns</a> **later in life**. 
 
 
-## How is arsenic regulated?
+## Where is the arsenic?
 
-* There are currently no U.S. regulatory limits on arsenic in food. 
-* The U.S. Environmental Protection Agency regulates arsenic in public water supplies.(link)
-* The U.S. Food and Drug Administration regulates arsenic in bottled water and has proposed regulations for rice and apple juice which testing has shown contain higher levels of arsenic.(links here)
-* If you drink from a private well, it is your responsibility to test your well water for arsenic. 
+Arsenic is a metalloid naturally found in rocks, soil, air, water, plants and animals. Arsenic has also been used in pesticides, animal feed, and certain industrial processes. Human activities that result in arsenic entering our environment include: 
 
-> "Arsenic has no taste, smell or color.  It is in foods and beverages, drinking water, soil, pressure treated wood and cigarettes. While everyone is exposed to some arsenic, learn about the potential sources of arsenic in your daily life, and make simple changes to keep your arsenic exposure as low as possible to protect your long-term health." <cite>Dr. Margaret Kurzius-Spencer, University of Arizona </cite>
+Burning coal for energy; mining metals; metal smelting operations; pesticide application; glass manufacture; disposal of wastewater sludges; pharmaceutical waste; livestock dips; phosphate fertilizer application; wood preservatives; and chemotherapeutic drugs. 
 
+<hr>
+
+<figure>
+  <img src="usgsmap" alt="USGS Map">
+  <figcaption>In the U.S., high concentrations of naturally occurring arsenic are more common in the West, Midwest, parts of Texas, and Northeast, but can occur almost anywhere. This map shows the probability of arsenic in private well water from 1 to 50 parts per billion (ppb). Note: 1 ug/L is the same as 1 ppb. **Remember, arsenic is not just a problem in those regions, so <a href="20">test your well for arsenic</a> no matter where you live.** Data and map - U.S. Geological Survey </figcaption>
+</figure>
+
+> "Arsenic has no taste, smell or color.  It is in foods and beverages, drinking water, soil, pressure treated wood and cigarettes. Learn about the potential sources of arsenic in your daily life, and make simple changes to keep your arsenic exposure as low as possible to protect your long-term health." <cite>Dr. Margaret Kurzius-Spencer, University of Arizona </cite>
+
+<p class="to-top"><a href="#top">Back to the top &#8617;&#65038;</a></p>
