--- a/pivot/content/content-glutenFree.html
+++ b/pivot/content/content-glutenFree.html
@@ -1,13 +1,6 @@
-<img src="glutenfree-banner4" alt="Gluten-free banner image" />
-
 ## Should you be concerned about arsenic if you eat a gluten-free diet?
 
-Yes. Like most people on a gluten-free diet, rice is likely in a lot of your meals, baked goods, and snacks. Rice can have high amounts of arsenic at levels that can cause significant <a href="24">health impacts</a> later in life. When you can, eat foods that aren't made with rice and try other grains, like oats and quinoa, instead.
-
-<figure>
-  <img src="ricegrain" alt="Rice grain">
-  <figcaption>When they're growing, rice plants take in more arsenic than other plants do. The plants absorb the arsenic from the soil, from the irrigation water when it is grown in flooded fields, and from farming chemicals that used to be used in rice fields. Figure by Tracy Punshon, Ph.D.</figcaption>
-</figure>
+Yes. Like most people on a gluten-free diet, rice is likely in a lot of your meals, baked goods, and snacks. Rice can have arsenic at levels that can cause significant <a href="24">health impacts</a> later in life. When you can, **eat foods that aren't made with rice and try other grains, like oats and quinoa, instead**.
 
 ## What gluten-free foods have arsenic in them?
 
@@ -22,55 +15,39 @@ Rice is the main gluten-free food with arsenic in it. If you eat a gluten-free d
 
 <img src="gluten_banner" alt="To avoid gluten and lower the amount of arsenic in your diet, eat other grains like Millet, Quinoa, Amaranth, Buckwheat, Corn, Oats, Flax, Teff">
 
-<div class="callout"><h3>What You Can Do</h3>
-
-You don't need to cut rice out of your diet. To lower the amount of arsenic you eat, try eating less rice and rice-based foods by: 
+<div class="callout"><h3>WHAT YOU CAN DO</h3>
+<h4>Diet Choices</h4>
 <ul>
-	<li><strong>Trying new grains</strong>. Instead of eating rice in all of your meals, try other grains that have less arsenic in them. For instance:
-		<ul>
-			<li>Quinoa</li>
-			<li>Oats</li>
-			<li>Corn</li>
-                        <li>Flax</li>
-                        <li>Amaranth</li>
-                        <li>Teff</li>
-			<li>Millet</li>
-			<li>Buckwheat</li>
-
-		</ul>
+	<li><strong>Eat less rice and rice-based foods</strong> </li>
+	<li><strong>Try new grains</strong>. Instead of eating rice in all of your meals, try other grains that have less arsenic in them. For instance:
+			&rArr; <em>Quinoa</em>, &rArr; <em>Oats</em>, &rArr; <em>Corn</em>, &rArr; <em>Flax</em>, &rArr; <em>Amaranth</em>, &rArr; <em>Teff</em>, &rArr; <em>Millet</em>, or &rArr; <em>Buckwheat</em>.
 	</li>
-	<li><strong>Choosing foods with less rice</strong>. When you buy packaged foods, be sure to check the ingredients label for the word “rice.” Eat less of this food or choose products that don't have rice in them. </li>
-	<li><strong>Switching out your rice</strong>. Some types of rice have less arsenic than others. When you want to eat rice, choose:
+	<li><strong>Choose foods with less rice</strong>. When you buy packaged foods, be sure to check the ingredients label for the word “rice.” Eat less of this food or choose products that don't have rice in them. </li>
+	<li><strong>Switch out your rice</strong>. Some types of rice have less arsenic than others. When you want to eat rice, choose:
 		<ul> 
 			<li>Quick-cooking rice</li>
 			<li>Instant rice</li>
 			<li>Sushi rice</li>
 			<li>Basmati rice from India, Pakistan, or California</li>
 		</ul>
-	</li>
-	<li><strong>Cooking your rice like you cook pasta</strong>. Cooking your rice with extra water and then draining it off can get rid of half the arsenic.</li>
+	</ul>
+<h4>Cooking</h4>
+<ul>
+	<li><strong>Cook your rice like you cook pasta</strong>. Cooking your rice with extra water and then draining it off can get rid of half the arsenic.</li>
 </ul>
 
-<h4>Also be sure to:</h4>
+<h4>Be Proactive</h4>
 <ul>
 	<li>Read the recommendations on the <a href="19">Arsenic in Rice</a> page to learn about other options to reduce your arsenic exposure through rice.</li>
 	<li>Eat a varied diet to make sure you're getting balanced nutrition.</li>
 	<li>If you have a private well, <a href="20"><strong>test your water</a></strong> for arsenic!</li>
-	<li>Review this site to better understand your total arsenic exposure.</li>
-	<li>Reduce your total arsenic exposure by following the recommendations in this website.</li>
+	<li>Review this site to better understand your <strong>total arsenic exposure</strong>.</li>
+	<li><strong>Look for the What You Can Do action steps to reduce your arsenic exposure</strong>.</li>
 </ul>
 </div>
 
 <img src="wash_rice_banner" alt="Get rid of half the arsenic: Cook your rice like pasta—use six times more water than rice and drain the water after cooking.">
  
-## How can arsenic in my diet harm my health?
+> "We estimate that with the higher concentrations of inorganic arsenic in white and brown rice and rice-based ingredients, people who eat a lot of rice - such as in many gluten-free diets - have an increased risk of inorganic arsenic exposure. Studies haven't yet confirmed this, and the amount of increased arsenic exposure is not known. However, people on a gluten-free diet who are concerned about arsenic exposure should eat a varied, nutritious diet and stay informed about arsenic in food." <cite>Dr. Tracy Punshon, Dartmouth College </cite>
 
-Eating or drinking too much arsenic can cause:
-
-* A weaker immune system 
-* Heart disease 
-* Cancer 
-
-You likely won't get sick right away from eating or drinking arsenic. Instead, <a href="24">health problems can happen</a> if you eat or drink very small amounts of arsenic over many years. Taking steps to eat less arsenic from rice and other sources is one way you can stay healthy.
-
-> "We estimate that, given the higher concentrations of inorganic arsenic in white and brown rice and rice-based ingredients, people who eat a lot of rice - such as in many gluten-free diets - have an increased risk of inorganic arsenic exposure. Studies have not yet confirmed this, and the amount of increased arsenic exposure is not known. However, people on a gluten-free diet who are concerned about arsenic exposure should eat a varied, nutritious diet and stay informed about arsenic in food." <cite>Dr. Tracy Punshon, Dartmouth College </cite>
+<p class="to-top"><a href="#top">Back to the top &#8617;&#65038;</a></p>
