Updated navigation, added content page, updated work notes

--- a/pivot/_components-4/newHeader.html
+++ b/pivot/_components-4/newHeader.html
@@ -51,7 +51,10 @@
 					<li><a href="#">Resources</a>
 						<ul class="menu vertical mjy-test3">
 							<li class="active7"><a href="7">Information and Resource Links</a></li>
-							<li class="active7"><a href="29">Definitions</a></li>
+							<li class="active34"><a href="34">What You Can Do</a></li>
+							<li class="active29"><a href="29">Definitions</a></li>
+							<li class="active33"><a href="33">Literature</a></li>
+							<li class="active35"><a href="35">For More Information</a></li>
 						</ul>														
 					</li>
 				</ul>
